unpackaged/main/default/objects/File_Upload_Capture__e/File_Upload_Capture__e.object-meta.xml
<CustomObject>
    <label>File Upload Capture</label>
    <pluralLabel>File Upload Captures</pluralLabel>
</CustomObject>