unpackaged/main/default/objects/File_Upload_Capture__e/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <label>ContentDocumentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>