unpackaged/main/default/objects/File_Upload_Capture__e/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>FileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>