unpackaged/main/default/objects/File_Upload_Capture__e/fields/LinkedEntityId__c.field-meta.xml
<CustomField>
    <fullName>LinkedEntityId__c</fullName>
    <label>LinkedEntityId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>